--- a/README.en
+++ b/README.en
@@ -1,5 +1,4 @@
 Ceci est un fichier readme
 Il contient seulement quelques lignes
 Pour mener à bien mon TP
-Et cette fois il est modifié
-Là aussi
+Ici aussi il est modifié
