--- a/README.en
+++ b/README.en
@@ -1,4 +1,4 @@
 Ceci est un fichier readme
 Il contient seulement quelques lignes
-Pour mener Ã  bien mon TP
-MOdification
+Pour mener à bien mon TP
+Qui m'énerve
